--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": "7.4.*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+      "ext-json": "*"
     }
 }
