--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
         "php": "7.4.*",
         "ext-pdo": "*",
       "ext-json": "*"
+    },
+    "config": {
+        "platform": {
+            "php": "7.4"
+        }
     }
 }
