Implement environment variable support to prevent hard-coded values.
Issue MIDU-192

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": "7.4.*",
         "ext-pdo": "*",
-      "ext-json": "*"
+        "ext-json": "*",
+        "vlucas/phpdotenv": "4.*"
     },
     "config": {
         "platform": {
